CHANGELOG
=========

0.3.2 (unreleased)
------------------

- Collmex uploads the whole week (#8808).
- Fix bug with umlauts in Collmex (#6474).


0.3.1 (2011-04-06)
------------------

- Update URLs for Redmine 1.1


0.3.0 (2011-04-05)
------------------

- Change Redmine integration so it does not require a plugin on the Redmine
  server. Users upgrading need to configure the name of the activity to use.
- Multiple Redmine servers are now supported (see README.txt).
- Filling Redmine has been extracted into its own command and is no longer done
  automatically along with HT or Collmex (#8884).
- Fix encoding problem with HT (#6474).


0.2.0 (2010-09-28)
------------------

- Use Rest-API to get issue subject.


0.1.9 (2010-04-09)
------------------

- Prevent an error with completion entries being None that occured on OS X.


0.1.8 (2010-04-07)
------------------

- Repair auto-completion that broke in 0.1.7.


0.1.7 (2010-04-01)
------------------

- Don't use lower-casing for autocompletion.

- Fix Collmex upload: First normalise projects, then sort them.


0.1.6 (2010-03-29)
------------------

- Support Redmine 0.9 with form ``authenticity_token``


0.1.5 (2010-02-26)
------------------

- Avoid showing duplicate entries in auto-completion,
  when loading auto completion from history at startup.


0.1.4 (2010-02-26)
------------------

- More relaxed, flexible auto completion.


0.1.3 (2010-02-19)
------------------

- Nothing changed yet.


0.1.2 (2009-11-23)
------------------

- Populate history with all previous entries, sort reverse-chronological.
- Added 'delete last entry' command.


0.1.1 (2009-11-15)
------------------

- Added option ``log_level`` which sets the default log level (``DEBUG``,
  ``ERROR``).
- Added log window. Log messages with level ``DEBUG`` will show up here
  instead of at the shell.


0.1 (2009-11-06)
----------------

- begin Changelog

- added import of projects and tasks from Collmex

- added export of activities to Collmex